docs/sass/style.scss
@import "_email_block.scss";

table, td, th {
    border: 0.1rem solid black;
    border-collapse: collapse;
}

td, th {
    padding: 0.0rem 0.4rem;
}

h3, .subtitle-text {
  font-family: "Fira Sans", sans-serif;
  font-size: 18px;
  font-weight: 400;
  color: var(--primary-text-color);
}

div.hero-flex-container {
    display: flex;
    flex-flow: row;
    align-items: center;
    justify-content: center;
}

div.hero {
    height: fit-content;
    padding-bottom: 2rem;
}

div.hero-flex-title {
    flex: 40%;
}

div.hero-flex-presentation {
    flex: 60%;
}

div.hero-flex-presentation-inner {
    width: fit-content;
    margin: auto;
    max-width: 100vw;
}

div.hero-flex-presentation-inner div.email-block-new {
    font-size: 1.2em;
}

div.hero-flex-presentation-inner div.email-block-response {
    font-size: 1.2em;
}

header {
    position: relative;
    background-color: var(--primary-color);
    height: fit-content;
}

@media screen and (max-width: 100rem) {
    div.hero-flex-container {
        flex-flow: column;
    }
}

